src/main/default/objects/Load__c/Load__c.object-meta.xml
<CustomObject>
    <label>Load</label>
    <nameField>
        <label>Load ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>