src/main/default/objects/Load__c/fields/CreateRoute__c.field-meta.xml
<CustomField>
    <fullName>CreateRoute__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field controlling when a Route and visits should be created. Logic will be triggered once, when the field is set to true. This field will be set to true automatically when all orders linked to the load are set to &quot;Pending Deliver&quot;.</description>
    <label>Create Route</label>
    <type>Checkbox</type>
</CustomField>