src/main/default/objects/Load__c/fields/DriverFullName__c.field-meta.xml
<CustomField>
    <fullName>DriverFullName__c</fullName>
    <description>Populating full name of the driver to be used in dynamic input lookup component</description>
    <formula>Driver__r.FirstName + &apos; &apos; +  Driver__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver Full Name</label>
    <type>Text</type>
</CustomField>