src/main/default/objects/Load__c/fields/IsReadyToBePicked__c.field-meta.xml
<CustomField>
    <fullName>IsReadyToBePicked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Flag for when load can be picked.</inlineHelpText>
    <label>Is Ready to Be Picked</label>
    <type>Checkbox</type>
</CustomField>