src/main/default/objects/Load__c/fields/JdeTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>JdeTimeStamp__c</fullName>
    <description>Date/Time from JDE Extract.</description>
    <label>JDE Time Stamp</label>
    <type>DateTime</type>
</CustomField>