src/main/default/objects/Load__c/fields/NumberOfDeliveryPoints__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDeliveryPoints__c</fullName>
    <label>Number Of Delivery Points</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>