src/main/default/objects/Load__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route</label>
    <referenceTo>aforza__Route__c</referenceTo>
    <relationshipLabel>Loads</relationshipLabel>
    <relationshipName>Loads</relationshipName>
    <type>Lookup</type>
</CustomField>