src/main/default/objects/Load__c/fields/RouteIdentification__c.field-meta.xml
<CustomField>
    <fullName>RouteIdentification__c</fullName>
    <label>Route Identification</label>
    <length>2</length>
    <type>Text</type>
</CustomField>