src/main/default/objects/Load__c/fields/SiteNo__c.field-meta.xml
<CustomField>
    <fullName>SiteNo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site No</label>
    <referenceTo>aforza__Inventory__c</referenceTo>
    <relationshipLabel>Loads</relationshipLabel>
    <relationshipName>Loads</relationshipName>
    <type>Lookup</type>
</CustomField>