src/main/default/objects/Load__c/fields/TotalWeight__c.field-meta.xml
<CustomField>
    <fullName>TotalWeight__c</fullName>
    <label>Total Weight</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>