src/main/default/objects/Load__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Loads</relationshipLabel>
    <relationshipName>Loads</relationshipName>
    <type>Lookup</type>
</CustomField>