src/main/default/objects/Load__c/fields/VehicleRegistration__c.field-meta.xml
<CustomField>
    <fullName>VehicleRegistration__c</fullName>
    <formula>Vehicle__r.VehicleRegistration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Registration</label>
    <type>Text</type>
</CustomField>