src/main/default/objects/Load__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DeliveryDate__c</columns>
    <columns>Depot__c</columns>
    <columns>DriverFullName__c</columns>
    <columns>NumberOfDeliveryPoints__c</columns>
    <columns>Route__c</columns>
    <columns>TotalQuantity__c</columns>
    <columns>TotalWeight__c</columns>
    <columns>Vehicle__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>